--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
 			<img id="head-image" src="/files/head.png" alt="Head silhouette" />
 			<!-- Floating symbols -->
 			<div class="floating-symbol symbol-1 music-note">♪</div>
-			<div class="floating-symbol symbol-2 code-symbol">{"{"}</div>
-			<div class="floating-symbol symbol-3 music-note">{"</>"}</div>
+			<div class="floating-symbol symbol-2 code-symbol">{</div>
+			<div class="floating-symbol symbol-3 music-note"></></div>
 			<div class="floating-symbol symbol-4 music-note">♬</div>
-			<div class="floating-symbol symbol-5 code-symbol">{"]"}</div>
+			<div class="floating-symbol symbol-5 code-symbol">]</div>
 
 			<header>
 				<nav class="navbar is-flex is-justify-content-center is-align-items-center">
