--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 				</div>
 
 				<div class="section is-flex is-justify-content-center is-align-items-center pt-0" data-theme="light">
-				<table class="table is-striped is-hoverable">
+				<table class="table is-striped is-hoverable mx-1">
 					<thead>
 						<tr>
 							<th>Format</th>
@@ -147,40 +147,40 @@
 						<tr>
 							<td>Music</td>
 							<td>Soundcloud Profile: all of my music :)</td>
-							<td><a href="https://soundcloud.com/drewwillard" class="button">Hear Stuff</a></td>
+							<td><a href="https://soundcloud.com/drewwillard" class="button is-small">Hear Stuff</a></td>
 						</tr>
 						<tr>
 							<td>Code</td>
 							<td>Github Profile: all of my public code projects</td>
-							<td><a href="https://github.com/dwilla" class="button">See Stuff</a></td>
+							<td><a href="https://github.com/dwilla" class="button is-small">See Stuff</a></td>
 						</tr>
 						<tr>
 							<td>Music</td>
 							<td>My last live show, 45min of original tunes/improvisation</td>
-							<td><a href="https://soundcloud.com/drewwillard/live-mix-from-torcava-9-23-2024?si=2e7fd8f75c5743699bf8ac0744fe760d&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" class="button">
+							<td><a href="https://soundcloud.com/drewwillard/live-mix-from-torcava-9-23-2024?si=2e7fd8f75c5743699bf8ac0744fe760d&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" class="button is-small">
 							Experience This</a></td>
 						</tr>
 						<tr>
 							<td>Music</td>
 							<td>Jamnuary: a playlist of songs I wrote within ~90min each over 9 days straight, part of Seed To Stage community event</td>
-							<td><a href="https://soundcloud.com/drewwillard/sets/drewillard-2025-jamns?si=0584f7f043a149a786a920e5da759c4c&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" class="button">
+							<td><a href="https://soundcloud.com/drewwillard/sets/drewillard-2025-jamns?si=0584f7f043a149a786a920e5da759c4c&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" class="button is-small">
 							Feel the Rush</a></td>
 						</tr>
 						<tr>
 							<td>Code</td>
 							<td>Mycelium: a realtime chat app, slack but you can see what people are typing ;)</td>
-							<td><a href="https://mycelium.com" class="button">Play With It</a> <a href="https://github.com/dwilla/mycelium" class="button">See Code</a></td>
+							<td><a href="https://mycelium.com" class="button is-small">Play With It</a> <a href="https://github.com/dwilla/mycelium" class="button is-small">See Code</a></td>
 						</tr>
 						<tr>
 							<td>Music</td>
 							<td>Live show, 60min of original music (all different from the other show hehe)</td>
-							<td><a href="https://soundcloud.com/drewwillard/live-mix-from-torcava-9-23-2024?si=2e7fd8f75c5743699bf8ac0744fe760d&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" class="button">
+							<td><a href="https://soundcloud.com/drewwillard/live-mix-from-torcava-9-23-2024?si=2e7fd8f75c5743699bf8ac0744fe760d&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" class="button is-small">
 							Open Earholes</a></td>
 						</tr>
 						<tr>
 							<td>Code</td>
 							<td>TorSee: an interactive directory/event board for T or C, old version, being rebuilt currently</td>
-							<td><a href="https://t-or-see.fly.dev/" class="button">Beta</a> <a href="https://github.com/dwilla/t-or-see" class="button">See Code</a></td>
+							<td><a href="https://t-or-see.fly.dev/" class="button is-small">Beta</a> <a href="https://github.com/dwilla/t-or-see" class="button is-small">See Code</a></td>
 						</tr>
 					</tbody>
 				</table>
